// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useRadioGroup > should not check any radio elements by default 1`] = `
<div>
  <form>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      First
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_0_"
          name="example"
          type="radio"
          value="a"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Second
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_1_"
          name="example"
          type="radio"
          value="b"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Third
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_2_"
          name="example"
          type="radio"
          value="c"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Forth
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_3_"
          name="example"
          type="radio"
          value="d"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
  </form>
</div>
`;

exports[`useRadioGroup > should not check any radio elements by default 2`] = `
<div>
  <form>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      First
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--active rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_0_"
          name="example"
          type="radio"
          value="a"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Second
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_1_"
          name="example"
          type="radio"
          value="b"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Third
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_2_"
          name="example"
          type="radio"
          value="c"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Forth
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_3_"
          name="example"
          type="radio"
          value="d"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
  </form>
</div>
`;

exports[`useRadioGroup > should not check any radio elements by default 3`] = `
<div>
  <form>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      First
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--active rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_0_"
          name="example"
          type="radio"
          value="a"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Second
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_1_"
          name="example"
          type="radio"
          value="b"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Third
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_2_"
          name="example"
          type="radio"
          value="c"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Forth
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_3_"
          name="example"
          type="radio"
          value="d"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
  </form>
</div>
`;

exports[`useRadioGroup > should not check any radio elements by default 4`] = `
<div>
  <form>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      First
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_0_"
          name="example"
          type="radio"
          value="a"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Second
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_1_"
          name="example"
          type="radio"
          value="b"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Third
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--active rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_2_"
          name="example"
          type="radio"
          value="c"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Forth
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_3_"
          name="example"
          type="radio"
          value="d"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
  </form>
</div>
`;

exports[`useRadioGroup > should support creating a required radio group 1`] = `
<div>
  <form>
    <label
      class="rmd-label rmd-label--gap rmd-label--error rmd-label--reversed rmd-error-color"
    >
      First
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-error-color"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_4_"
          name="example"
          required=""
          type="radio"
          value="a"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--error rmd-label--reversed rmd-error-color"
    >
      Second
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-error-color"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_5_"
          name="example"
          required=""
          type="radio"
          value="b"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--error rmd-label--reversed rmd-error-color"
    >
      Third
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-error-color"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_6_"
          name="example"
          required=""
          type="radio"
          value="c"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--error rmd-label--reversed rmd-error-color"
    >
      Forth
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-error-color"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_7_"
          name="example"
          required=""
          type="radio"
          value="d"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <button
      class="rmd-button rmd-button--text rmd-interaction-surface"
      type="submit"
    >
      <span>
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`useRadioGroup > should support creating a required radio group 2`] = `
<div>
  <form>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      First
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--active rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_4_"
          name="example"
          required=""
          type="radio"
          value="a"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Second
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_5_"
          name="example"
          required=""
          type="radio"
          value="b"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Third
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_6_"
          name="example"
          required=""
          type="radio"
          value="c"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <label
      class="rmd-label rmd-label--gap rmd-label--reversed"
    >
      Forth
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal"
      >
        <input
          class="rmd-hidden-input"
          id="radio-_r_7_"
          name="example"
          required=""
          type="radio"
          value="d"
        />
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
    </label>
    <button
      class="rmd-button rmd-button--text rmd-interaction-surface"
      type="submit"
    >
      <span>
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`useRadioGroup > should support rendering within a menu 1`] = `
<div
  aria-labelledby="menubutton-_r_g_"
  class="rmd-menu rmd-menu--elevated"
  id="menu-_r_i_"
  role="menu"
  style="position: fixed; transform-origin: 0 0; left: 16px; top: 0px;"
  tabindex="-1"
>
  <ul
    class="rmd-list"
    role="none"
  >
    <li
      aria-checked="false"
      class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-radio-menu-item rmd-menu-item-input-toggle"
      id="menu-item-_r_j_"
      role="menuitemradio"
      tabindex="-1"
    >
      <span
        class="rmd-radio rmd-input-toggle rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-menu-item-input-toggle__icon"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        First
      </span>
    </li>
    <li
      aria-checked="false"
      class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-radio-menu-item rmd-menu-item-input-toggle"
      id="menu-item-_r_k_"
      role="menuitemradio"
      tabindex="-1"
    >
      <span
        class="rmd-radio rmd-input-toggle rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-menu-item-input-toggle__icon"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        Second
      </span>
    </li>
    <li
      aria-checked="true"
      class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-radio-menu-item rmd-menu-item-input-toggle"
      id="menu-item-_r_l_"
      role="menuitemradio"
      tabindex="-1"
    >
      <span
        class="rmd-radio rmd-input-toggle rmd-input-toggle--active rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-menu-item-input-toggle__icon"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_checked
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        Third
      </span>
    </li>
    <li
      aria-checked="false"
      class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-radio-menu-item rmd-menu-item-input-toggle"
      id="menu-item-_r_m_"
      role="menuitemradio"
      tabindex="-1"
    >
      <span
        class="rmd-radio rmd-input-toggle rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-menu-item-input-toggle__icon"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          radio_button_unchecked
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        Forth
      </span>
    </li>
  </ul>
</div>
`;
